Implementing CRUD of Person

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     jpa:
         database: MYSQL
         hibernate:
-            ddl-auto: validate
+            ddl-auto: update
 
     datasource:
         url: jdbc:mysql://127.0.0.1:3306/semive
