--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,7 @@ spring:
         username: ${SEMIVE_DATABASE_USERNAME:root}
     flyway:
         baseline-on-migrate: true
+        enabled: ${SEMIVE_INIT_DB:true}
     jpa:
         database: MYSQL
         hibernate:
