Integration with Swagger

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>semive-backend</name>
-	<description>Demo project for Spring Boot</description>
+	<description>API para controle de clientes, fornecedores, produtos e pedidos</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -72,6 +72,16 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.7.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
